<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>teach-course</artifactId>
        <groupId>cn.qbs.wa</groupId>
        <version>1.0.0-train</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>teach-course-standard</artifactId>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>tencent-maven</id>
            <name>tencent-maven</name>
            <url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
        </repository>

        <repository>
            <id>qbs-maven</id>
            <name>qbs-maven</name>
            <url>https://nexus.armpc.cn/repository/maven-releases/</url>
        </repository>
    </repositories>


    <dependencies>
        <!-- SpringCloud Alibaba Nacos -->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
        </dependency>

        <!-- SpringCloud Alibaba Nacos Config -->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
        </dependency>

        <!-- SpringBoot Actuator -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- SpringBoot Web -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Collection 增强Java集合框架 -->
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-common-datasource</artifactId>
            <version>1.0.0-train</version>
            <exclusions>
                <exclusion>
                    <groupId>io.seata</groupId>
                    <artifactId>seata-spring-boot-starter</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.alibaba.cloud</groupId>
                    <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.qbs</groupId>-->
<!--            <artifactId>tdmq-spring-boot-starter</artifactId>-->
<!--        </dependency>-->

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-common-security</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-common-redisson</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-common-swagger</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-common-log</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-api-basic</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-api-organization</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-api-notification</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>easyexcel</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-course-common</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-common-weixin</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-common-oss</artifactId>
            <version>1.0.0-train</version>
        </dependency>

        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>teach-api-out-union-admin</artifactId>
            <version>1.0.0-train</version>
        </dependency>
        <dependency>
            <groupId>cn.qbs.wa</groupId>
            <artifactId>train-api-logistics</artifactId>
            <version>1.0.0-train</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
                        <nonFilteredFileExtension>woff</nonFilteredFileExtension>
                        <nonFilteredFileExtension>woff2</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                              <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <outputDirectory> /mydata/train/teach-server/docker/app/jar </outputDirectory>
                </configuration>
     <!--指定Maven打包目录位置-->

                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
